# hardware-101

./: .gitignore  CNAME  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  temperature.py
74HC595/: README.md  sn74hc595.py
74HC595/doc/: schaltung.fzz
Transistoren/: README.md
apa102/: README.md  apa102.py
apa102/doc/: Sketch.fzz
ds18b20/: README.md  ds18b20.py
ds18b20/doc/: schaltung.fzz
esp8266/: README.md  esp8266_i2c_scan.py
esp8266/GatewayESP8266/: GatewayESP8266.ino
fake-rpi/: README.md  sitecustomize.py
gertboard/: README.md  gertboard-led_btn.py  gertboard_da.py
gertboard/doc/: IOPort.xcf
gpiozero/: README.md
hd44780/: README.md  lcd.py
hd44780/doc/: schaltung.fzz
led_matrix/: 5x7.font  README.md  ledmatrix.py
led_matrix/doc/: schaltung.fzz
lm75/: README.md  lm75.py
mcp23017/: MCP23017.py  README.md
mcp23017/doc/: mcp23017_grundschaltung.drawio
mcp23017/docs/: mcp23017_grundschaltung.sch
mcp23017/sample/: README.md  mcp23017_sample.drawio  mcp23017_sample.py  mcp23017_sample.sch
mcp23s17/: MCP23S17.py  README.md
mcp23s17/doc/: mcp23s17_grundschaltung.drawio
mcp23s17/sample/: README.md  (+2 more)
mcp3201/: README.md
mcp3208/: README.md
mcp3426/: README.md
mcp4151/: README.md  mcp4151.py
mpu6050/: README.md  mpu6050.py
orange_pi_zero/: README.md
raspi/: README.md  RaspiCheatSheet.sla  RaspiCheatSheetMiniBook.sla  make_minibook.sh
rgb_led/: README.md  rgb_led.py
servo/: README.md  servo.py
sh1106/: README.md  SH1106.py  oled.py  oleddisplay.py
ssd1306/: README.md  ssd1306.py
ws281x/: README.md  ws281x.py
(+10 files in other folders)
