[tool.poetry]
name = "hw101"
homepage = "https://hw101.tbs1.de"
readme = "README.md"
version = "0.1.3"
description = ""
authors = ["Marco Bakera <bakera@tbs1.de>", "Reinhard Gummlich <gummlich@tbs1.de>"]
packages = [
    { include = "MCP23017.py", from="mcp23017" },
    { include = "MCP23S17.py", from="mcp23s17" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
