[tool.poetry]
name = "hw101"
homepage = "https://hw101.tbs1.de"
readme = "README.md"
version = "0.2.0"
description = "Classes for educational purposes to get started with hardware projects."
authors = ["Marco Bakera <bakera@tbs1.de>", "Reinhard Gummlich <gummlich@tbs1.de>"]
packages = [
    { include = "MCP23017.py", from="mcp23017" },
    { include = "MCP23S17.py", from="mcp23s17" },
    { include = "ssd1306.py", from="ssd1306" },
]

[tool.poetry.dependencies]
python = "^3.7"
spidev = "^3.5"
smbus = "^1.1.post2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
